# pyinkcli

./: .gitignore  README.md  cache.md  cache_table.md  plan.md  plan_A.md  pyproject.toml  sitecustomize.py  temp.md
.github/workflows/: release.yml  test.yml
docs/: ansi-tokenizer-case-audit.md  complete-parity-audit-report.md  examples-parity-status.md  examples-parity-verification-report.md  implementation-single-source-notes.md  ink-python-parity-issues-and-milestones.md  ink-python-parity-remediation-roadmap.md  ink-python-vs-js-ink-parity-report.md  internal-runtime-audit.md  js-python-file-parity-audit.md  js-python-naming-parity-audit.md  naming-parity-audit.md  output-structure-audit.md  runtime-behavior-audit.md  sanitize-ansi-case-audit.md  sanitize-ansi-defense-layers.md  translation_map.md
examples/: borders.py  chat.py  debug-counter.py  hello.py  justify-content.py  layout.py  router.py  select-input.py  simple-counter.py  static.py  terminal-resize.py  use-cursor.py  use-focus-manager.py  use-focus.py  use-input.py  use-stderr.py  use-stdout.py
examples/alternate-screen/: alternate-screen.py  index.py
examples/aria/: aria.py  index.py
examples/borders/: borders.py  index.py
examples/box-backgrounds/: box-backgrounds.py  index.py
examples/chat/: chat.py  index.py
examples/concurrent-render/: main.py
examples/concurrent-suspense/: concurrent-suspense.py  index.py
examples/counter/: counter.py  index.py
examples/cursor-ime/: cursor-ime.py  index.py
examples/incremental-rendering/: incremental-rendering.py  index.py
examples/jest/: index.py  jest.py  summary.py  test.py
examples/justify-content/: index.py  justify-content.py
examples/render-throttle/: index.py
examples/router/: index.py  router.py
examples/select-input/: index.py  select-input.py
examples/static/: index.py  static.py
examples/stress-test/: README.md  index.py  perf_metrics.py  stress-test-compare.py  stress-test-extreme.py  stress-test.py
examples/subprocess-output/: index.py  subprocess-output.py
examples/suspense/: index.py  suspense.py
examples/table/: index.py  table.py
examples/terminal-resize/: index.py  terminal-resize.py
examples/use-deferred-value/: main.py
examples/use-focus/: index.py  use-focus.py
examples/use-focus-with-id/: index.py  use-focus-with-id.py
examples/use-input/: index.py  use-input.py
examples/use-stderr/: index.py  use-stderr.py
examples/use-stdout/: index.py  use-stdout.py
examples/use-transition/: index.py  main.py  use-transition.py
js_source/: ink_dependency_map.md
src/ink_python/: __init__.py  _component_runtime.py  _restore_cursor.py  _suspense_runtime.py  ansi_tokenizer.py  colorize.py  component.py  context.py  cursor_helpers.py  devtools.py  devtools_hydration.py  devtools_window_polyfill.py  dom.py  get_max_width.py  index.py  ink.py  input_parser.py  instances.py  kitty_keyboard.py  log_update.py  measure_element.py  measure_text.py  output.py  parse_keypress.py  patch_console.py  reconciler.py  render.py  render_background.py  render_border.py  render_node_to_output.py  render_to_string.py  renderer.py  sanitize_ansi.py  squash_text_nodes.py  styles.py  suspense_runtime.py  wrap_text.py  write_synchronized.py  yoga_compat.py
src/ink_python/components/: AccessibilityContext.py  App.py  AppContext.py  BackgroundContext.py  Box.py  CursorContext.py  ErrorBoundary.py  ErrorOverview.py  FocusContext.py  Newline.py  Spacer.py  Static.py  StderrContext.py  StdinContext.py  Text.py  Transform.py  __init__.py  _accessibility_runtime.py  _app_context_runtime.py  _background_runtime.py  app.py  box.py  newline.py  spacer.py  static.py  text.py  transform.py
src/ink_python/hooks/: __init__.py  _runtime.py  state.py  use_app.py  use_box_metrics.py  use_cursor.py  use_focus.py  use_focus_manager.py  use_input.py  use_is_screen_reader_enabled.py  use_paste.py  use_stderr.py  use_stdin.py  use_stdout.py  use_window_size.py
src/ink_python/utils/: __init__.py  cli_boxes.py  wrap_ansi.py
src/pyinkcli/: __init__.py  _component_runtime.py  _restore_cursor.py  _suspense_runtime.py  _yoga.py  ansi_tokenizer.py  colorize.py  component.py  cursor_helpers.py  devtools.py  devtools_hydration.py  devtools_window_polyfill.py  dom.py  example_data.py  example_runner.py  get_max_width.py  index.py  ink.py  input_parser.py  instances.py  kitty_keyboard.py  layout_render.py  log_update.py  measure_element.py  measure_text.py  output.py  parse_keypress.py  patch_console.py  reconciler.py  render.py  render_background.py  render_border.py  render_helpers.py  render_instance.py  render_node_to_output.py  render_to_string.py  renderer.py  sanitize_ansi.py  squash_text_nodes.py  styles.py  (+5 more)
src/pyinkcli/components/: AccessibilityContext.py  App.py  AppContext.py  BackgroundContext.py  Box.py  CursorContext.py  ErrorBoundary.py  ErrorOverview.py  FocusContext.py  Newline.py  Spacer.py  Static.py  StderrContext.py  StdinContext.py  StdoutContext.py  Text.py  Transform.py  (+4 more)
tests/: conftest.py  test_ansi_escapes.py  test_ansi_tokenizer.py  test_background_render.py  test_box.py  test_cli_boxes.py  test_cursor_helpers.py  test_devtools_editor.py  test_devtools_hydration.py  test_devtools_runtime.py  test_error_boundary.py  test_examples_directory_parity.py  test_examples_smoke.py  test_focus_runtime.py  test_get_max_width.py  test_hooks.py  test_index_exports.py  test_ink_input_decoding.py  test_ink_stream_output.py  test_input_parser.py  test_layout_renderer_parity.py  test_log_update_runtime.py  test_output_buffer.py  test_package_entrypoints.py  test_parse_keypress.py  test_patch_console_pty_integration.py  test_patch_console_runtime.py  test_react_children.py  test_react_devtools_core_backend_surface.py  test_react_dom_port.py  test_react_reconciler_foundations.py  test_react_router_port.py  test_reconciler_incremental.py  test_render_instance.py  test_runtime_behavior_audit.py  test_runtime_semantics.py  test_sanitize_ansi.py  test_squash_text_nodes.py  test_string_width.py  test_text.py  (+3 more)
tests/yoga_layout/: test_basic_layout.py
(+27 files in other folders)
