[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyinkcli"
dynamic = ["version"]
description = "Python fork and translation of Ink for building terminal UIs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Quantmew Contributors" }
]
keywords = [
    "cli",
    "console",
    "terminal",
    "ui",
    "react",
    "ink",
    "component",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Terminals",
    "Typing :: Typed",
]
dependencies = [
    "wcwidth>=0.2.0",
    "colorama>=0.4.0",
    "yoga-layout-python>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/quantmew/pyinkcli"
Documentation = "https://github.com/quantmew/pyinkcli#readme"
Repository = "https://github.com/quantmew/pyinkcli"
Issues = "https://github.com/quantmew/pyinkcli/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/pyinkcli"]

[tool.hatch.build.targets.sdist]
include = [
    "/src/pyinkcli",
    "/README.md",
    "/LICENSE",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
path = "src/pyinkcli/__init__.py"

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["js_source"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501", "UP007", "UP045", "B905"]

[tool.ruff.lint.per-file-ignores]
"tests/test_devtools_hydration.py" = ["SIM118"]

[tool.mypy]
python_version = "3.10"
files = ["src/pyinkcli"]
exclude = ["^examples/", "^tests/", "^js_source/"]
mypy_path = "src"
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["yoga"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "pyinkcli._component_runtime",
    "pyinkcli._yoga",
    "pyinkcli.ansi_tokenizer",
    "pyinkcli.components.*",
    "pyinkcli.get_max_width",
    "pyinkcli.hooks.*",
    "pyinkcli.ink",
    "pyinkcli.input_parser",
    "pyinkcli.log_update",
    "pyinkcli.packages.*",
    "pyinkcli.parse_keypress",
    "pyinkcli.patch_console",
    "pyinkcli.render",
]
ignore_errors = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
